--- a/src/notes/数据结构与算法之美/为什么很多编程语言中数组都从0开始编号？.md
+++ b/src/notes/数据结构与算法之美/为什么很多编程语言中数组都从0开始编号？.md
@@ -1,15 +1,33 @@
 # 为什么很多编程语言中数组都从0开始编号？
 
-提到数组，我想你肯定不陌生，甚至还会自信地说，它很简单啊。
-
-是的，在每一种编程语言中，基本都会有数组这种数据类型。不过，它不仅仅是一种编程语言中的数据类型，还是一种最基础的数据结构。尽管数组看起来非常基础、简单，但是我估计很多人都并没有理解这个基础数据结构的精髓。
+在每一种编程语言中，基本都会有数组这种数据类型。不过，它不仅仅是一种编程语言中的数据类型，还是一种最基础的数据结构。
 
 在大部分编程语言中，数组都是从 0 开始编号的，但你是否下意识地想过，**为什么数组要从 0 开始编号，而不是从 1 开始呢？** 从 1 开始不是更符合人类的思维习惯吗？
 
 ## 如何实现随机访问？
 
-什么是数组？我估计你心中已经有了答案。不过，我还是想用专业的话来给你做下解释。**数组（Array）是一种线性表数据结构。它用一组连续的内存空间，来存储一组具有相同类型的数据。**
+**数组（Array）是一种线性表数据结构。它用一组连续的内存空间，来存储一组具有相同类型的数据。**
 
-这个定义里有几个关键词，理解了这几个关键词，我想你就能彻底掌握数组的概念了。下面就从我的角度分别给你“点拨”一下。
+这个定义里有几个关键词。
 
 第一是**线性表**（Linear List）。顾名思义，线性表就是数据排成像一条线一样的结构。每个线性表上的数据最多只有前和后两个方向。其实除了数组，链表、队列、栈等也是线性表结构。
+
+<img src="http://dean-imgsubmit.oss-cn-beijing.aliyuncs.com/uPic/image-20221204030020166.png" alt="image-20221204030020166" style="zoom:50%;" />
+
+而与它相对立的概念是**非线性表**，比如二叉树、堆、图等。之所以叫非线性，是因为，在非线性表中，数据之间并不是简单的前后关系。
+
+![image-20221204030050901](http://dean-imgsubmit.oss-cn-beijing.aliyuncs.com/uPic/image-20221204030050901.png)
+
+第二个是**连续的内存空间和相同类型的数据**。正是因为这两个限制，它才有了一个堪称“杀手锏”的特性：“随机访问”。但有利就有弊，这两个限制也让数组的很多操作变得非常低效，比如要想在数组中删除、插入一个数据，为了保证连续性，就需要做大量的数据搬移工作。
+
+我们拿一个长度为 10 的 int 类型的数组 int[] a = new int[10] 来举例。在我画的这个图中，计算机给数组 a[10]，分配了一块连续内存空间 1000～1039，其中，内存块的首地址为 base_address = 1000。
+
+![image-20221204030140312](http://dean-imgsubmit.oss-cn-beijing.aliyuncs.com/uPic/image-20221204030140312.png)
+
+我们知道，计算机会给每个内存单元分配一个地址，计算机通过地址来访问内存中的数据。当计算机需要随机访问数组中的某个元素时，它会首先通过下面的寻址公式，计算出该元素存储的内存地址：
+
+```
+a[i]_address = base_address + i * data_type_size
+```
+
+其中 data_type_size 表示数组中每个元素的大小。我们举的这个例子里，数组中存储的是 int 类型数据，所以 data_type_size 就为 4 个字节。
