--- a/src/notes/食谱/简单素食.md
+++ b/src/notes/食谱/简单素食.md
@@ -2,12 +2,12 @@
 
 ## 蒜蓉西兰花🥦
 
-[【小高姐】蒜蓉西兰花_](https://www.bilibili.com/video/BV1fy4y1W7z5/?spm_id_from=333.337.search-card.all.click)
+[【小高姐】蒜蓉西兰花](https://www.bilibili.com/video/BV1fy4y1W7z5/?spm_id_from=333.337.search-card.all.click)
 
 -  西兰花一（半）颗
-- 干辣椒 一个
+-  干辣椒 一个
 -  蒜 两瓣
-- 鸡精
+-  鸡精
 
 步骤：
 
