redis design pattrn

--- a/src/notes/redis/持久化.md
+++ b/src/notes/redis/持久化.md
@@ -12,3 +12,8 @@ redis是基于内存的数据库。
 ## RDB
 
 实现类似照片记录效果的方式,就是把某一时刻的数据和状态以文件的形式写到磁盘上,也就是快照。这样一来即故障宕机,快照文件也不会丢失,数据的可可靠性也就得到了保证。这个快照文件就称为RDB文件(dump.rdb),其中,RDB就是RedisDataBase的缩写。
+
+### 配置文件
+
+#### redis 6.0.16
+
