--- a/src/notes/redis/十大数据类型.md
+++ b/src/notes/redis/十大数据类型.md
@@ -1,6 +1,6 @@
 # 十大数据类型
 
-常用命令
+# 常用命令
 
 ```
 keys * 
@@ -17,4 +17,89 @@ dbsize
 flushdb
 flushall
 ```
+
+## 字符串 String
+
+1. 缓存数据。String类型可以用于缓存数据，例如缓存一个经常被查询的数据库表或接口返回的数据，可以设置一个缓存时间，避免大量的数据库或接口访问。
+2. 分布式锁。Redis String类型可以用于实现分布式锁。当多个客户端都需要同时操作共享资源时，可以使用分布式锁来保证资源的互斥性。例如，在分布式系统中使用Redis的String类型实现分布式锁来确保某个任务只被一个客户端执行。
+3. 计数器。Redis的String类型可以用于实现计数器。例如，记录用户的在线时间，每次用户登录时将计数器加1，退出时将计数器减1。
+4. 缓存会话信息。在Web应用程序中，可以将会话信息存储在Redis的String类型中，以提高性能和可伸缩性。
+
+## 列表 List
+
+Redis中的List类型是一个有序的字符串列表，它可以存储一个字符串类型的有序列表。List类型支持在头部或尾部添加元素，以及根据下标或元素值进行元素的查找、插入、修改和删除等操作。
+
+1. 消息队列：可以将消息作为List的元素，生产者在尾部添加元素，消费者在头部消费元素，实现简单的消息队列。
+2. 最近联系人：可以将用户最近联系的好友作为List的元素，每次有新的好友联系，就将该好友元素插入到List的头部，最后保留前N个好友。
+3. 排行榜：可以将用户得分等信息作为List的元素，根据元素值进行排序，然后取出前N名的用户。
+4. 日志存储：可以将日志信息作为List的元素，每天新建一个List，将当天的日志信息插入到List中，然后通过时间范围查询获取某个时间段内的日志信息。
+5. 分页查询：可以将一批数据作为List的元素，每页的数据量等于List的长度，然后通过下标获取某一页的数据。
+6. 历史记录：可以将用户的历史搜索记录、浏览记录等作为List的元素，最后可以实现类似于浏览器历史记录的功能。
+
+## 集合 Set
+
+Redis中的Set类型是一个无序的字符串集合，它可以存储多个字符串类型的元素，每个元素都是独立的、不可重复的。Redis Set类型支持并集、交集、差集等集合操作，同时也支持添加、删除、查找等基本操作。
+
+1. 标签管理：可以将标签作为Set的元素，每个标签对应一个元素，可以通过集合操作来获取标签的交集、并集、差集等操作，实现灵活的标签管理。
+2. 共同好友：可以将用户的好友列表作为Set的元素，然后通过求两个用户好友列表的交集，来获取他们的共同好友列表。
+3. 去重统计：可以将某些数据的唯一标识作为Set的元素，然后通过Set的元素数量来统计去重后的数据数量。
+4. 抽奖活动：可以将参加抽奖活动的用户ID作为Set的元素，然后通过随机函数从Set中获取指定数量的元素，来完成抽奖活动。
+5. 推荐系统：可以将用户的喜好标签作为Set的元素，然后根据不同用户的Set元素求交集，来推荐可能感兴趣的内容或商品。
+
+## 有序集合 Zset
+
+Redis中的Zset类型，也称为有序集合，是一种字符串集合，其中的每个元素都关联一个double类型的分值，这个分值可以用来做排序或者按照分值范围查找元素。
+
+1. 排行榜：可以将用户的ID作为Zset的元素，将用户的分数作为Zset的分值，然后通过Zset的分值排序功能，可以实现排行榜的功能，比如热门商品排行、影视排行等。
+2. 时间轴：可以将用户的ID作为Zset的元素，将用户的时间戳作为Zset的分值，然后通过Zset的分值排序功能，可以实现时间轴的功能，比如微博、推特等社交网络的时间轴。
+3. 积分排名：可以将用户的ID作为Zset的元素，将用户的积分作为Zset的分值，然后通过Zset的分值排序功能，可以实现积分排名的功能，比如游戏中的玩家积分排行。
+4. 范围查询：可以使用Zset的分值范围查询功能，来查找符合某个分值范围的元素，比如查找某个时间段内的数据。
+
+## 位图 bitmap
+
+Redis Bitmap类型是一种二进制位数组类型，它可以被认为是Redis String类型的一种特殊情况，可以用来存储0和1的序列，其中每个bit位都可以被设置或者清除，这种数据类型适用于一些需要处理二进制位的场景。
+
+1. 统计在线用户数：可以用Redis Bitmap类型来实现在线用户的统计，可以将每个用户的ID映射为一个bit位，当用户在线时设置该位为1，下线时清除该位，最后通过统计1的个数来计算在线用户数。
+2. 统计用户签到：可以使用Redis Bitmap类型来实现用户的签到功能，可以将签到日期映射为一个bit位，用户签到时设置该位为1，最后通过统计1的个数来计算用户签到的总天数。
+3. 统计用户访问频率：可以使用Redis Bitmap类型来实现用户的访问频率统计，可以将每个用户的ID和日期组合为一个key，将日期映射为一个bit位，当用户访问时设置该位为1，然后通过统计1的个数来计算用户在某个时间段内的访问次数。
+
+## 基数统计 HyperLogLog
+
+Redis HyperLogLog类型是一种基数估计算法，用于快速、高效地估算大数据集合中的元素数量，其使用的空间仅为常数级别，因此可以在相对较小的内存空间内处理大量数据，下面是Redis HyperLogLog类型的一些常见使用场景：
+
+1. 统计网站UV：可以使用Redis HyperLogLog类型来估算网站的UV，可以将每个访问网站的用户的IP地址作为HyperLogLog的元素，使用HyperLogLog的基数估算算法估算网站的UV数量。
+2. 统计流量数据：可以使用Redis HyperLogLog类型来统计网络流量，可以将每个IP地址作为HyperLogLog的元素，使用HyperLogLog的基数估算算法估算网络流量。
+3. 统计用户在线时长：可以使用Redis HyperLogLog类型来估算用户在线时长，可以将每个用户的ID作为HyperLogLog的元素，使用HyperLogLog的基数估算算法估算用户的在线时长。
+
+总之，Redis HyperLogLog类型适用于需要快速、高效地估算大数据集合中元素数量的场景，它的应用范围很广，可以应用于统计网站UV、网络流量、用户在线时长等多种情况，使用HyperLogLog可以节省大量的内存空间和计算资源。
+
+## 地理空间 GEO
+
+Redis GEO类型是一种支持地理位置信息的数据类型，它可以存储地理位置信息和地理位置数据，并提供了一些基于地理位置查询的命令。下面是Redis GEO类型的一些常见使用场景：
+
+1. 位置服务：可以使用Redis GEO类型来实现位置服务，可以将每个用户的位置信息存储在Redis GEO类型中，使用GEO相关的命令可以查询用户附近的位置信息，以及计算两个用户之间的距离等。
+2. 热点地图：可以使用Redis GEO类型来实现热点地图，可以将每个地理位置点的坐标存储在Redis GEO类型中，使用GEO相关的命令可以查询热点地图上的位置信息，以及计算热点区域的中心点等。
+3. 物流配送：可以使用Redis GEO类型来实现物流配送，可以将每个物品的发货地址和收货地址存储在Redis GEO类型中，使用GEO相关的命令可以查询物品附近的配送员，以及计算物品的配送距离和时间等。
+
+总之，Redis GEO类型适用于需要存储和查询地理位置信息的场景，它的应用范围很广，可以应用于位置服务、热点地图、物流配送等多种情况，使用GEO相关的命令可以快速、高效地查询和处理地理位置数据。
+
+## 流 Stream
+
+edis Stream是Redis 5版本中新增的数据类型，它是一个基于时间序列的消息队列，支持多个生产者和多个消费者，并提供了一些有用的功能，如消息的持久化、消息的消费确认、消息的消费阻塞等。下面是Redis Stream类型的一些常见使用场景：
+
+1. 实时消息系统：可以使用Redis Stream类型来实现实时消息系统，可以将消息存储在Redis Stream类型中，使用XADD命令来生产消息，使用XREAD命令来消费消息，实现实时消息的传递和处理。
+2. 日志处理系统：可以使用Redis Stream类型来实现日志处理系统，可以将日志消息存储在Redis Stream类型中，使用XADD命令来生产日志消息，使用XGROUP命令来创建消费者组，使用XREADGROUP命令来消费日志消息，实现日志消息的收集、过滤、处理和存储等。
+3. 数据流处理：可以使用Redis Stream类型来实现数据流处理，可以将数据流存储在Redis Stream类型中，使用XADD命令来生产数据流，使用XREAD命令来消费数据流，实现数据流的实时处理和分析等。
+
+总之，Redis Stream类型适用于需要实现消息队列、日志处理、数据流处理等场景，它的应用范围很广，可以应用于实时消息系统、日志处理系统、数据流处理等多种情况，使用XADD、XREAD、XGROUP等相关的命令可以快速、高效地处理和传递消息。
+
+## 位域 bitfield
+
+Redis Bitfield是Redis 3.2版本中新增的一种数据类型，它可以用于操作二进制位，比如可以用来表示用户的某些属性或者状态，例如某些订阅或权限的状态、在线用户状态、用户行为分析等。下面是Redis Bitfield类型的一些常见使用场景：
+
+1. 用户权限管理：可以使用Redis Bitfield类型来实现用户权限管理，将每个用户的权限状态用二进制位表示，比如第0位表示订阅权限、第1位表示发帖权限、第2位表示评论权限等，使用BITFIELD命令可以设置、查询、修改用户权限状态。
+2. 用户状态管理：可以使用Redis Bitfield类型来实现用户状态管理，将每个用户的在线状态用二进制位表示，比如第0位表示是否在线、第1位表示是否闲置、第2位表示是否离线等，使用BITFIELD命令可以设置、查询、修改用户在线状态。
+3. 统计分析：可以使用Redis Bitfield类型来进行统计分析，例如可以用来记录用户的行为数据，比如用户的访问量、点击量、购买量等，使用BITFIELD命令可以快速地读取和修改二进制位数据，进行数据的分析和处理。
+
+总之，Redis Bitfield类型适用于需要操作二进制位的场景，比如用户权限管理、用户状态管理、统计分析等，它的应用范围很广，可以应用于用户行为分析、用户权限管理、在线状态管理等多种情况，使用BITFIELD等相关的命令可以快速、高效地处理和存储二进制位数据。
 
