--- a/src/notes/redis/缓存双写一致性.md
+++ b/src/notes/redis/缓存双写一致性.md
@@ -35,3 +35,27 @@
 双检加锁策略是一种解决并发编程中线程安全问题的方法，它结合了懒加载和线程同步的优势，既能保证只有在需要的时候才会创建对象，又能保证线程安全。
 
 在实现过程中，需要先检查对象是否已经创建，如果没有，再加锁创建对象。同时为了提高效率，可以再加一个判断，如果对象已经创建，直接返回已有的对象，避免重复创建。这样既能保证线程安全，又能保证效率。因此，双检加锁策略通常被广泛应用于单例模式的实现。
+
+## 缓存双写一致性的更新策略
+
+### 先更新数据库,再更新缓存
+
+- 异常情况一：更新mysql后，redis因为某些原因更新失败。
+- 异常情况二：多线程更新，在事务的影响下，redis和mysql最终数据不一致
+
+### 先更新缓存,再更新数据库
+
+多线程更新，在事务的影响下，redis和mysql最终数据不一致
+
+### 先删除缓存，再更新数据库
+
+-  请求A进行写操作，删除redis缓存后，工作正在进行中，更新mysql......A还么有彻底更新完mysql，还没commit
+- 请求B开工查询，查询redis发现缓存不存在(被A从redis中删除了)
+- 请求B继续，去数据库查询得到了mysql中的旧值(A还没有更新完)
+- 请求B将旧值写回redis缓存
+- 请求A将新值写入mysql数据库 
+
+如果数据库更新失败或超时或返回不及时，导致B线程请求访问缓存时发现redis里面没数据，缓存缺失，B再去读取mysql时，从数据库中读取到旧值，还写回redis，导致A白干了
+
+#### 延时双删
+
