--- a/src/notes/高并发系统实战/对比单体系统、分布式系统和微服务系统.md
+++ b/src/notes/高并发系统实战/对比单体系统、分布式系统和微服务系统.md
@@ -20,7 +20,7 @@ isOriginal: true
 
 在企业初创期，用户量不多，业务场景也不复杂，这正是验证技术和业务模式可行性之时，系统越简单越好，搭建过程越快越好。于是，可以在同一台服务器上构建 “1 个应用程序 ＋ 1 个数据库 ＋1个文件服务器” 的单体系统，如图所示
 
-<img src="http://dean-imgsubmit.oss-cn-b`eijing.aliyuncs.com/note/image-20230324231052182.png" alt="image-20230324231052182" style="zoom: 50%;" />
+<img src="http://dean-imgsubmit.oss-cn-beijing.aliyuncs.com/note/image-20230324231052182.png" alt="image-20230324231052182" style="zoom: 50%;" />
 
 ### 单体系统面临的问题
 
