替换为GitHub图床

--- a/src/notes/高并发系统实战/生产级系统框架设计的细节/接口参数校验——增强服务健壮性.md
+++ b/src/notes/高并发系统实战/生产级系统框架设计的细节/接口参数校验——增强服务健壮性.md
@@ -81,7 +81,7 @@ public class MemberSaveReq {
 
 ### @Validation 的校验流程
 
-![image-20230328225131714](http://dean-imgsubmit.oss-cn-beijing.aliyuncs.com/note/image-20230328225131714.png)
+![image-20230328225131714](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img@main/dean/image-20230328225131714.png)
 
 ## 【实战】自定义参数校验注解
 
