feat: 添加watermark组件 添加watermark组件

--- a/src/notes/高并发系统实战/生产级系统框架设计的细节/幂等性设计——保证数据的一致性.md
+++ b/src/notes/高并发系统实战/生产级系统框架设计的细节/幂等性设计——保证数据的一致性.md
@@ -2,6 +2,7 @@
 title: 幂等性设计——保证数据的一致性
 author: 陈清华
 isOriginal: true
+watermark: 陈清华
 ---
 
 # 幂等性设计——保证数据的一致性
@@ -99,9 +100,4 @@ DELETE FROM user WHERE id = 1；
 4. 下单接口在收到提交下单的请求后，首先判断在 Redis 中是否存在当前传入的 Token。
 5. 利用数据库的主键唯一特性和 Token 机制来避免重复提交，是一种比较常用的接口幂等性方案。对于重复提交的场景，需要依据业务进行分析，分析当前场景是否具备幂等性，如果不具有幕等性，则需要进行幂等性设计。
 
-
-
-<MyComponent author="陈清华" />
-<script setup lang="ts">
-import MyComponent from "@MyComponent";
-</script>
+<WaterMark/>
