--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -2,23 +2,62 @@
 今天是世界读书日，贴心的群友们为大家准备了书单
 
 ## 凤凰架构
+
 推荐人——生财哥
+
+![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s33966407.jpg)
+
 开源地址：https://icyfenix.cn/
+
 豆瓣：https://book.douban.com/subject/35492898/
 
 ## 永恒的终结
+
+![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s27409671.jpg)
+
 推荐人——听老师
+
 豆瓣：https://book.douban.com/subject/25829693/
 
 ## 神们自己
+
+![img](https://img1.doubanio.com/view/subject/l/public/s27882508.jpg)
+
 推荐人——听老师
+
 豆瓣：https://book.douban.com/subject/26264967/
 
 ## 数据密集型应用系统设计
+
+![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34186559.jpg)
+
 推荐人——p哥
+
 开源地址：http://ddia.vonng.com/
+
 豆瓣：https://book.douban.com/subject/30329536/
 
+
+## 微服务架构设计模式
+
+推荐人——处长
+
+![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s32303297.jpg)
+
+豆瓣：https://book.douban.com/subject/33425123/
+
 ## 遥远的救世主
+
 推荐人——县长
+
+![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s3073167.jpg)
+
 豆瓣：https://book.douban.com/subject/1322455/
+
+## 代码整洁之道
+
+![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34476554.jpg)
+
+推荐人——丁老师
+
+豆瓣:https://book.douban.com/subject/34986245/
