--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -5,7 +5,7 @@
 
 推荐人——生财哥
 
-![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s33966407.jpg)
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s33966407.jpg" alt="img" style="zoom: 25%;" />
 
 开源地址：https://icyfenix.cn/
 
@@ -13,7 +13,7 @@
 
 ## 永恒的终结
 
-![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s27409671.jpg)
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s27409671.jpg" alt="img" style="zoom: 50%;" />
 
 推荐人——听老师
 
@@ -21,7 +21,7 @@
 
 ## 神们自己
 
-![img](https://img1.doubanio.com/view/subject/l/public/s27882508.jpg)
+<img src="https://img1.doubanio.com/view/subject/l/public/s27882508.jpg" alt="img" style="zoom: 50%;" />
 
 推荐人——听老师
 
@@ -29,7 +29,7 @@
 
 ## 数据密集型应用系统设计
 
-![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34186559.jpg)
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34186559.jpg" alt="img" style="zoom:50%;" />
 
 推荐人——p哥
 
@@ -42,7 +42,7 @@
 
 推荐人——处长
 
-![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s32303297.jpg)
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s32303297.jpg" alt="img" style="zoom:50%;" />
 
 豆瓣：https://book.douban.com/subject/33425123/
 
@@ -56,7 +56,7 @@
 
 ## 代码整洁之道
 
-![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34476554.jpg)
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34476554.jpg" alt="img" style="zoom: 25%;" />
 
 推荐人——丁老师
 
