--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -1,4 +1,4 @@
-# 群友书单
+# 2023 世界读书日书单
 今天是世界读书日，贴心的群友们为大家准备了书单
 
 ## 凤凰架构
@@ -61,3 +61,11 @@
 推荐人——丁老师
 
 豆瓣:https://book.douban.com/subject/34986245/
+
+## 球状闪电
+
+![img](https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s26040205.jpg)
+
+推荐人——木子老师
+
+豆瓣：https://book.douban.com/subject/1192090/
