--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -69,3 +69,11 @@
 推荐人——木子老师
 
 豆瓣：https://book.douban.com/subject/1192090/
+
+## 要钱还是要生活
+
+推荐人——咖哥
+
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34022650.jpg" alt="img" style="zoom: 50%;" />
+
+豆瓣：https://book.douban.com/subject/35611477/
