--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -77,3 +77,11 @@
 <img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34022650.jpg" alt="img" style="zoom: 50%;" />
 
 豆瓣：https://book.douban.com/subject/35611477/
+
+## 假面饭店
+
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s28968023.jpg" alt="img" style="zoom:50%;" />
+
+推荐人——叶檀哥
+
+豆瓣：https://book.douban.com/subject/26853726/
