--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -11,6 +11,22 @@
 
 豆瓣：https://book.douban.com/subject/35492898/
 
+## 剑指offer
+
+推荐人——西东哥
+
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s2941379.jpg" alt="img" style="zoom:50%;" />
+
+豆瓣：https://book.douban.com/subject/27008702/
+
+## 法治的细节
+
+推荐人——西东哥
+
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s34025530.jpg" alt="img" style="zoom:33%;" />
+
+豆瓣：https://book.douban.com/subject/35635639/
+
 ## 永恒的终结
 
 <img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s27409671.jpg" alt="img" style="zoom: 50%;" />
