--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -1,4 +1,4 @@
-# 2023 世界读书日书单
+![image](https://github.com/stiflea/stiflea.github.io/assets/41585297/bad7c90f-a2da-47d7-a53f-548fbeeb6c92)# 2023 世界读书日书单
 今天是世界读书日，贴心的群友们为大家准备了书单，快来一起读书提升自己吧  (*ฅ́ˇฅ̀*)
 
 ## 凤凰架构
@@ -10,6 +10,14 @@
 开源地址：https://icyfenix.cn/
 
 豆瓣：https://book.douban.com/subject/35492898/
+
+## 金字塔原理
+
+推荐人——西东哥
+
+<img src="https://cdn.jsdelivr.net/gh/stiflea/stiflea-img/dean/s32276605.jpg" alt="img" style="zoom:50%;" />
+
+豆瓣：https://book.douban.com/subject/33391219/
 
 ## 剑指offer
 
