--- a/src/notes/窒息杂谈/books20234.md
+++ b/src/notes/窒息杂谈/books20234.md
@@ -1,4 +1,4 @@
-![image](https://github.com/stiflea/stiflea.github.io/assets/41585297/bad7c90f-a2da-47d7-a53f-548fbeeb6c92)# 2023 世界读书日书单
+# 2023 世界读书日书单
 今天是世界读书日，贴心的群友们为大家准备了书单，快来一起读书提升自己吧  (*ฅ́ˇฅ̀*)
 
 ## 凤凰架构
